增加显示被拦截的url功能

--- a/iframe/Main.less
+++ b/iframe/Main.less
@@ -38,6 +38,19 @@
   border-color: #40a9ff;
   border-right-width: 1px !important;
 }
+.overrideTxt::-webkit-input-placeholder {
+  color: hsv(0, 0, 75%);
+}
+.intercepted-requests {
+  text-align: left;
+  line-height: 25px;
+}
+.url {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 
 .panel-header {
   text-align: left;
