--- a/iframe.css
+++ b/iframe.css
@@ -1,6 +1,7 @@
 .api-interceptor {
-  transform: translateX(350px);
+  transform: translateX(370px);
   transition: all .4s;
+  box-shadow: 0 0 15px 2px rgba(0,0,0,0.12);
 }
 .api-interceptor.show {
   transform: translateX(0);
