--- a/iframe/Main.less
+++ b/iframe/Main.less
@@ -1,8 +1,7 @@
 .main {
   text-align: center;
   overflow-y: auto;
-  padding: 20px 13px;
-  padding-bottom: 40px;
+  padding: 20px 13px 60px 13px;
   width: 100%;
   height: 100%;
   background: white;
@@ -10,7 +9,7 @@
 .settingBody {
   position: relative;
   transition: all .5s;
-  padding-top: 10px;
+  padding-top: 15px;
 }
 .settingBody-hidden {
   transform: translateY(calc(-100% + 10px));
