--- a/iframe/Main.less
+++ b/iframe/Main.less
@@ -42,7 +42,9 @@
   vertical-align: top;
 }
 .panel-header {
-  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .wrapper-btn-add {
   position: absolute;
