--- a/iframe/Main.less
+++ b/iframe/Main.less
@@ -44,7 +44,14 @@
 .panel-header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+}
+.button-group {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex: none;
+  width: 84px;
 }
 .wrapper-btn-add {
   position: absolute;
