style: panel width adjust

--- a/iframe/Main.less
+++ b/iframe/Main.less
@@ -1,9 +1,14 @@
+#main {
+  display: flex;
+  justify-content: center;
+}
 .main {
   text-align: center;
   overflow-y: auto;
   padding: 20px 13px 60px 13px;
   width: 100%;
   height: 100%;
+  max-width: 850px;
   background: white;
 }
 .settingBody {
@@ -51,7 +56,7 @@
   align-items: center;
   justify-content: flex-end;
   flex: none;
-  width: 84px;
+  margin: 0 16px;
 }
 .wrapper-btn-add {
   position: absolute;
