--- a/iframe/main/Main.less
+++ b/iframe/main/Main.less
@@ -14,7 +14,7 @@
 .setting-body {
   position: relative;
   transition: all .5s;
-  padding-top: 15px;
+  padding: 15px 0 60px;
 }
 .setting-body-hidden {
   transform: translateY(calc(-100% + 15px));
