feat: payload and headers examples

--- a/iframe/main/components/Replacer/index.less
+++ b/iframe/main/components/Replacer/index.less
@@ -1,7 +1,10 @@
 .replace-with {
-  margin-bottom: 16px;
+  margin-bottom: 10px;
   text-align: left;
   font-weight: 500;
+  display: flex;
+  align-items: center;
+  height: 30px;
 }
 .overrideTxt {
   resize: none;
