--- a/iframe/main/Main.less
+++ b/iframe/main/Main.less
@@ -137,3 +137,12 @@
   background-size: contain;
 }
 
+.ant-collapse-content > .ant-collapse-content-box {
+  padding: 10px 12px 12px;
+}
+.ant-dropdown-menu {
+  background-color: #353c47;
+}
+.ant-dropdown-menu-item, .ant-dropdown-menu-submenu-title {
+  color: #ffffff;
+}
