--- a/iframe/main/components/Editor/index.less
+++ b/iframe/main/components/Editor/index.less
@@ -23,10 +23,25 @@
   .language-select .ant-select-arrow {
     color: #ffffffb3;
   }
-  .align-button {
-    margin-left: 12px;
+  .border-button {
+    display: inline-flex;
+    align-items: center;
+    margin-right: 12px;
+    height: 22px;
+    background: #353c47;
+    border-radius: 4px;
+    padding: 0 7px;
+    color: #ffffff;
+    cursor: pointer;
   }
-  .down-button {
+  .border-button:last-child {
+    margin-right: 12px;
+  }
+  .align-icon {
+    margin-right: 6px;
+  }
+  .down-icon {
     margin-left: 2px;
   }
 }
+
