--- a/iframe/main/components/Replacer/index.less
+++ b/iframe/main/components/Replacer/index.less
@@ -1,10 +1,9 @@
 .replace-with {
-  margin-bottom: 10px;
+  margin: 10px;
   text-align: left;
   font-weight: 500;
-  display: flex;
-  align-items: center;
   height: 30px;
+  line-height: 30px;
 }
 .overrideTxt {
   resize: none;
@@ -53,10 +52,10 @@
   font-size: 12px;
 }
 .replace-radio {
-  margin-bottom: 10px;
-  width: calc(100% - 30px - 16px);
+  margin: 10px 0;
+  width: 100%;
   label {
-    width: 33.33%;
+    width: calc(100% / 3);
   }
 }
 .expert-icon {
@@ -73,9 +72,4 @@
 .ant-radio-button-wrapper {
   height: 30px;
   line-height: 28px;
-}
-.expert-wrapper {
-  display: inline-flex;
-  justify-content: space-between;
-  width: 100%;
 }
